--- a/src/control/package.json
+++ b/src/control/package.json
@@ -4,6 +4,7 @@
   "description": "Project containing your PowerApps Component Framework (PCF) control.",
   "scripts": {
     "build": "pcf-scripts build",
+    "build:solution": "pcf-scripts solution:build",
     "clean": "pcf-scripts clean",
     "rebuild": "pcf-scripts rebuild",
     "start": "pcf-scripts start"
