--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/setup-node@v2  # Sets up the Node.js environment
 
       - name: Install Dependencies
-        working-directory: ./src/control  # Sets the working directory to the control directory
+        working-directory: ./src  # Sets the working directory to the control directory
         run: npm install  # Installs project dependencies for the PCF control
 
       - name: Build PCF Control
-        working-directory: ./src/control  # Sets the working directory to the control directory
+        working-directory: ./src  # Sets the working directory to the control directory
         run: npm run build  # Executes the build process for the PCF control
 
       - name: Build Solution
