--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           $solution_name=$(grep -oP '<LocalizedName description="\K[^"]+' ./src/solution/src/Other/solution.xml)
           $solution_version=$(cat ./src/solution/src/Other/solution.xml | grep -oP '<Version>\K[^<]+' | tr -d '\n')
+          echo "Solution $solution_name v$solution_version"
           echo "name=solution-name::$solution_name"   >> $GITHUB_OUTPUT
           echo "name=solution-version::$solution_version"   >> $GITHUB_OUTPUT
 
