--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2  # Downloads the source code
 
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0.x'
+      # - name: Set up .NET
+      #   uses: actions/setup-dotnet@v1
+      #   with:
+      #     dotnet-version: '6.0.x'
 
-      - name: Restore NuGet packages
-        run: dotnet restore
+      # - name: Restore NuGet packages
+      #   run: dotnet restore
 
       - name: Extract Solution Name and Version
         id: extract-info
