--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -44,9 +44,10 @@ jobs:
         working-directory: ./src/solution  # Sets the working directory to the solution directory
         run: |
           msbuild /t:build /restore
-          mv ./src/solution/bin/Debug/solution.zip ./src/solution/bin/Debug/${{ steps.extract-info.outputs.solution-name }}_managed_${{ steps.extract-info.outputs.solution-version }}.zip
           $artifact = "./src/solution/bin/Debug/${{ steps.extract-info.outputs.solution-name }}_managed_${{ steps.extract-info.outputs.solution-version }}.zip"
-          echo "Artifact:  $$artifact"
+          echo "Artifact:  $artifact"
+          mv ./bin/Debug/solution.zip ./bin/Debug/${{ steps.extract-info.outputs.solution-name }}_managed_${{ steps.extract-info.outputs.solution-version }}.zip
+
           echo "artifact=$artifact"   >> $GITHUB_OUTPUT
 
       - name: Archive Solution
