--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2  # Downloads the source code
 
       - name: Extract Solution Name and Version
-        id: extract-info
+        id: extract_info
         run: |
           $xml = [xml](Get-Content ./src/solution/src/Other/solution.xml)
           $solution_version = $xml.ImportExportXml.SolutionManifest.Version
@@ -22,8 +22,12 @@ jobs:
 
           echo "Solution: $solution_name"
           echo "Version:  $solution_version"
-          echo "solution-name=$solution_name"   >> $GITHUB_OUTPUT
-          echo "solution-version=$solution_version"   >> $GITHUB_OUTPUT
+          echo "solution_name=$solution_name"   >> $GITHUB_OUTPUT
+          echo "solution_version=$solution_version"   >> $GITHUB_OUTPUT
+
+      - name: "Check Version"
+        run: |
+          echo "Output [${{steps.extract_info.outputs.solution_name}} v${{steps.extract_info.outputs.solution_version}}]"
 
       - name: Set up Node.js
         uses: actions/setup-node@v2  # Sets up the Node.js environment
