--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2  # Downloads the source code
 
       - name: Extract Solution Name and Version
-        id: extract_info
+        id:   "extract_info"
         run: |
           $xml = [xml](Get-Content ./src/solution/src/Other/solution.xml)
           $solution_version = $xml.ImportExportXml.SolutionManifest.Version
@@ -22,8 +22,8 @@ jobs:
 
           echo "Solution: $solution_name"
           echo "Version:  $solution_version"
-          echo "solution_name=$solution_name"   >> $GITHUB_OUTPUT
-          echo "solution_version=$solution_version"   >> $GITHUB_OUTPUT
+          echo "solution_name=$solution_name" >> "$GITHUB_OUTPUT"
+          echo "solution_version=$solution_version" >> "$GITHUB_OUTPUT"
 
       - name: "Check Version"
         run: |
