--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2  # Downloads the source code
+        uses: actions/checkout@v3  # Downloads the source code
 
       - name: Extract Solution Name and Version
         id:   "extract_info"
@@ -30,7 +30,7 @@ jobs:
           echo "Output [${{steps.extract_info.outputs.solution_name}} v${{steps.extract_info.outputs.solution_version}}]"
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2  # Sets up the Node.js environment
+        uses: actions/setup-node@v3  # Sets up the Node.js environment
 
       - name: Install Dependencies
         working-directory: ./src  # Sets the working directory to the control directory
@@ -49,14 +49,15 @@ jobs:
         run: |
           msbuild /t:build /restore
           
-          $artifact = "./src/solution/bin/Debug/${{ steps.extract_info.outputs.solution_name }}_managed_${{ steps.extract_info.outputs.solution_version }}.zip"
+          $name     = "${{ steps.extract_info.outputs.solution_name }}_managed_${{ steps.extract_info.outputs.solution_version }}.zip".replace(" ", "_")
+          $artifact = "./src/solution/bin/Debug/$name"
           echo "Artifact:  $artifact"
-          cp ./bin/Debug/solution.zip ./bin/Debug/${{ steps.extract-info.outputs.solution_name }}_managed_${{ steps.extract-info.outputs.solution_version }}.zip
+          mv ./bin/Debug/solution.zip "./bin/Debug/$name"
 
           echo "artifact=$artifact" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
 
       - name: Archive Solution
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.extract_info.outputs.solution_name }} ${{ steps.extract_info.outputs.solution_version }}
           path: ${{ steps.build_solution.outputs.artifact }}
