--- a/.github/workflows/pcf_build.yml
+++ b/.github/workflows/pcf_build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master  # Workflow execution will be triggered when code is pushed to the "main" branch
 
+  release:
+    types:
+      - created
+
 jobs:
   build:
     runs-on: windows-latest # ubuntu-latest  # Uses an Ubuntu runtime environment
@@ -54,6 +58,7 @@ jobs:
           echo "Artifact:  $artifact"
           mv ./bin/Debug/solution.zip "./bin/Debug/$name"
 
+          echo "artifact_name=$name" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
           echo "artifact=$artifact" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
 
       - name: Archive Solution
@@ -61,3 +66,14 @@ jobs:
         with:
           name: Artifacts
           path: ${{ steps.build_solution.outputs.artifact }}
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        if: github.event_name == 'release'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ steps.build_solution.outputs.artifact }}
+          asset_name: ${{ steps.build_solution.outputs.artifact_name }}
+          asset_content_type: application/zip
