--- a/.github/workflows/pr_validation.yml
+++ b/.github/workflows/pr_validation.yml
@@ -22,7 +22,8 @@ on:
 
 jobs:
   validate:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest # ubuntu-latest  # Uses an Ubuntu runtime environment
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3  # Downloads the source code
